--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Newsletter</title>
+    <title>Weekly Daily</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -82,40 +82,40 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Newsletter</h1>
-        <p class="intro">Stay updated with our latest articles and news!</p>
+        <h1>Weekly Daily Newsletter</h1>
+        <p class="intro">Weekly news every saturday</p>
     </header>
     
     <div class="articles">
         <div class="article">
             <img src="https://via.placeholder.com/150" alt="Article 1 Image">
             <h2>Article Title 1</h2>
-            <p>This is a brief description of Article 1. It gives an overview of the content covered.</p>
+            <p>Jakir</p>
         </div>
         <div class="article">
             <img src="https://via.placeholder.com/150" alt="Article 2 Image">
             <h2>Article Title 2</h2>
-            <p>This is a brief description of Article 2. It highlights the key points discussed.</p>
+            <p>Dr jakir man </p>
         </div>
         <div class="article">
             <img src="https://via.placeholder.com/150" alt="Article 3 Image">
             <h2>Article Title 3</h2>
-            <p>This is a brief description of Article 3. It summarizes the main ideas presented.</p>
+            <p>Dr jakir vs dr yunus</p>
         </div>
         <div class="article">
             <img src="https://via.placeholder.com/150" alt="Article 4 Image">
             <h2>Article Title 4</h2>
-            <p>This is a brief description of Article 4. It conveys the essential information.</p>
+            <p>Jakir2</p>
         </div>
         <div class="article">
             <img src="https://via.placeholder.com/150" alt="Article 5 Image">
             <h2>Article Title 5</h2>
-            <p>This is a brief description of Article 5. It provides insights into the topic discussed.</p>
+            <p>Most awaited moments from the show dr jakir</p>
         </div>
         <div class="article">
             <img src="https://via.placeholder.com/150" alt="Article 6 Image">
             <h2>Article Title 6</h2>
-            <p>This is a brief description of Article 6. It highlights important takeaways.</p>
+            <p>placeboo effect</p>
         </div>
     </div>
 
