article demo added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         header {
             text-align: center;
             padding: 15px;
-            background-color: #34495e; /* Modern dark blue */
+            background-color: #1b1b1b; /* Modern dark blue */
             color: white;
         }
         h1 {
@@ -77,7 +77,7 @@
         .read-more-button {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #34495e; /* Match the theme */
+            background-color: #000000; /* Match the theme */
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -156,8 +156,8 @@
                     <img src="https://via.placeholder.com/150" alt="Article 1 Image">
                     <div>
                         <h2>Article Title 1</h2>
-                        <p>Article description for article 1...</p>
-                        <a href="article1 goes here link" class="read-more-button">Read More</a>
+                        <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic.</p>
+                        <a href="articles/article1.html" class="read-more-button">Read More</a>
                     </div>
                 </div>
                 <div class="article">
