Updated index.html with article content (1/4)

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
         <div class="articles-container">
             <div class="articles">
                 <div class="article">
-                    <img src="https://via.placeholder.com/150" alt="Article 1 Image">
+                    <img src="https://c8.alamy.com/comp/R5FP5H/apple-cut-in-half-with-seeds-and-pulp-to-show-R5FP5H.jpg" alt="Article 1 Image">
                     <div>
-                        <h2>Article Title 1</h2>
+                        <h2>How apple seeds cause harm to human body</h2>
                         <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic.</p>
                         <a href="articles/article1.html" class="read-more-button">Read More</a>
                     </div>
