--- a/index.html
+++ b/index.html
@@ -218,5 +218,6 @@
             <input type="submit" value="Subscribe">
         </form>
     </div>
+ <script src="script.js" defer></script>
 </body>
 </html>
