Added js funcionality for mobile

--- a/index.html
+++ b/index.html
@@ -218,6 +218,6 @@
             <input type="submit" value="Subscribe">
         </form>
     </div>
- <script src="script.js" defer></script>
+ <script src="mobileRespo.js" defer></script>
 </body>
 </html>
