--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         }
 
         .ad {
-            background-color: #f1c40f; /* Eye-catching yellow for the ad */
+            background-color: #dab00c; /* Eye-catching yellow for the ad */
             padding: 15px;
             border-radius: 10px;
             text-align: center;
