--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         }
 
         .articles-container {
-            width: 70%;
+            width: 100%;
+            margin: 0 auto;
         }
 
         .articles {
@@ -50,7 +51,7 @@
             display: flex;
             background: #ffffff;
             border-radius: 10px;
-            padding: 15px;
+            padding: 20px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s, box-shadow 0.3s;
         }
@@ -59,8 +60,8 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
         .article img {
-            width: 150px; /* Adjust image size */
-            height: auto; /* Maintain aspect ratio */
+            width: 200px; /* Adjust image size */
+            height: 150px; /* Maintain aspect ratio */
             border-radius: 5px;
             margin-right: 15px; /* Space between image and text */
         }
