--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         header {
             text-align: center;
             padding: 15px;
-            background-color: #1b1b1b; /* Modern dark blue */
+            background-color: #1b1b1b;
             color: white;
         }
         h1 {
@@ -30,25 +30,35 @@
             font-size: 1.2em;
         }
 
+        /* Featured Article */
+        .featured-article {
+            background-color: #f0f4f8;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .featured-article img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        .featured-article h2 {
+            font-size: 2em;
+            margin: 15px 0;
+            color: #34495e;
+        }
+
+        /* Content Grid */
         .content {
-            display: flex;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
             padding: 20px;
         }
 
-        .articles-container {
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        .articles {
-            display: flex;
-            flex-direction: column;
-            gap: 20px; /* Space between articles */
-        }
-
         .article {
-            display: flex;
             background: #ffffff;
             border-radius: 10px;
             padding: 20px;
@@ -60,48 +70,86 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
         .article img {
-            width: 200px; /* Adjust image size */
-            height: 150px; /* Maintain aspect ratio */
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
             border-radius: 5px;
-            margin-right: 15px; /* Space between image and text */
         }
         .article h2 {
-            font-weight: 700;
             font-size: 1.5em;
+            margin-top: 10px;
             color: #34495e;
         }
         .article p {
             font-size: 1em;
-            color: #7f8c8d; /* Modern gray text */
+            color: #7f8c8d;
         }
-
         .read-more-button {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #000000; /* Match the theme */
+            background-color: #000000;
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            transition: background-color 0.3s;
-            margin-top: 10px; /* Spacing below the text */
+            margin-top: 10px;
         }
         .read-more-button:hover {
-            background-color: #2c3e50; /* Darker shade on hover */
+            background-color: #2c3e50;
         }
 
-        /* Subscribe button */
-        .subscribe-button {
+        /* Category Tags */
+        .category {
+            font-size: 0.9em;
+            background-color: #f39c12;
+            color: white;
             display: inline-block;
-            padding: 15px 25px;
+            padding: 3px 8px;
+            border-radius: 3px;
+            margin-bottom: 5px;
+        }
+
+        /* Social Media Sharing */
+        .social-share {
+            margin-top: 10px;
+        }
+        .social-share a {
+            margin-right: 10px;
+            text-decoration: none;
+            color: #3498db;
+        }
+
+        /* Sidebar Newsletter Signup */
+        .sidebar {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #ffffff;
+            padding: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            width: 250px;
+        }
+        .sidebar h3 {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        .sidebar input[type="email"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .sidebar button {
+            width: 100%;
+            padding: 10px;
             background-color: #34495e;
             color: white;
-            text-decoration: none;
-            font-size: 1.2em;
-            border-radius: 5px;
-            text-align: center;
-            transition: background-color 0.3s;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
         }
-        .subscribe-button:hover {
+        .sidebar button:hover {
             background-color: #2c3e50;
         }
 
@@ -112,70 +160,47 @@
     </style>
 </head>
 <body>
+
     <header>
         <h1>Weekly Daily Newsletter</h1>
         <p class="intro">Weekly news delivered every Saturday</p>
     </header>
 
+    <!-- Featured Article Section -->
+    <section class="featured-article">
+        <img src="https://via.placeholder.com/800x400" alt="Featured Article Image">
+        <h2>Featured: The Hidden Dangers of Apple Seeds</h2>
+        <p>Discover why apple seeds might not be as harmless as they seem and what to do about it.</p>
+        <a href="articles/article1.html" class="read-more-button">Read More</a>
+    </section>
+
+    <!-- Articles Grid -->
     <main class="content">
-        <div class="articles-container">
-            <div class="articles">
-                <div class="article">
-                    <img src="https://c8.alamy.com/comp/R5FP5H/apple-cut-in-half-with-seeds-and-pulp-to-show-R5FP5H.jpg" alt="Apple cut in half with seeds">
-                    <div>
-                        <h2>How apple seeds cause harm to human body</h2>
-                        <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic.</p>
-                        <a href="articles/article1.html" class="read-more-button">Read More</a>
-                    </div>
-                </div>
-                <div class="article">
-                    <img src="https://via.placeholder.com/150" alt="Article 2 Image">
-                    <div>
-                        <h2>Article Title 2</h2>
-                        <p>Article description for article 2...</p>
-                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
-                    </div>
-                </div>
-                <div class="article">
-                    <img src="https://via.placeholder.com/150" alt="Article 3 Image">
-                    <div>
-                        <h2>Article Title 3</h2>
-                        <p>Article description for article 3...</p>
-                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
-                    </div>
-                </div>
-                <div class="article">
-                    <img src="https://via.placeholder.com/150" alt="Article 4 Image">
-                    <div>
-                        <h2>Article Title 4</h2>
-                        <p>Article description for article 4...</p>
-                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
-                    </div>
-                </div>
-                <div class="article">
-                    <img src="https://via.placeholder.com/150" alt="Article 5 Image">
-                    <div>
-                        <h2>Article Title 5</h2>
-                        <p>Article description for article 5...</p>
-                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
-                    </div>
-                </div>
-                <div class="article">
-                    <img src="https://via.placeholder.com/150" alt="Article 6 Image">
-                    <div>
-                        <h2>Article Title 6</h2>
-                        <p>Article description for article 6...</p>
-                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
-                    </div>
-                </div>
+        <div class="article">
+            <span class="category">Health</span>
+            <img src="https://via.placeholder.com/300x200" alt="Article 1 Image">
+            <h2>How apple seeds cause harm to human body</h2>
+            <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds...</p>
+            <a href="articles/article1.html" class="read-more-button">Read More</a>
+            <div class="social-share">
+                <a href="#">Share on Facebook</a>
+                <a href="#">Share on Twitter</a>
             </div>
         </div>
+        <!-- Repeat the same article structure for more articles -->
     </main>
+
+    <!-- Sidebar Signup Form -->
+    <div class="sidebar">
+        <h3>Subscribe</h3>
+        <p>Get our latest updates straight to your inbox.</p>
+        <input type="email" placeholder="Your email">
+        <button>Subscribe</button>
+    </div>
 
     <footer>
         <a href="signup.html" class="subscribe-button">Subscribe to Our Newsletter</a>
     </footer>
-    
-    <script src="mobileRespo.js" defer></script>
+
 </body>
 </html>
