--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         header {
             text-align: center;
             padding: 15px;
-            background-color: #1b1b1b;
+            background-color: #1b1b1b; /* Modern dark blue */
             color: white;
         }
         h1 {
@@ -30,35 +30,45 @@
             font-size: 1.2em;
         }
 
-        /* Featured Article */
-        .featured-article {
-            background-color: #f0f4f8;
+        .content {
+            display: flex;
+            justify-content: center;
             padding: 20px;
+        }
+
+        .articles-container {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        /* Featured Article Section */
+        .featured-article {
+            background-color: #eaeaea;
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 40px;
             text-align: center;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         .featured-article img {
             max-width: 100%;
             height: auto;
-            border-radius: 8px;
+            border-radius: 10px;
         }
         .featured-article h2 {
             font-size: 2em;
-            margin: 15px 0;
             color: #34495e;
         }
 
-        /* Content Grid */
-        .content {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
+        .articles {
+            display: flex;
+            flex-direction: column;
+            gap: 20px; /* Space between articles */
         }
 
         .article {
+            display: flex;
+            flex-direction: column;
             background: #ffffff;
             border-radius: 10px;
             padding: 20px;
@@ -71,136 +81,142 @@
         }
         .article img {
             width: 100%;
-            height: 180px;
-            object-fit: cover;
+            height: auto;
+            max-width: 200px;
             border-radius: 5px;
+            margin-right: 15px; /* Space between image and text */
         }
         .article h2 {
+            font-weight: 700;
             font-size: 1.5em;
-            margin-top: 10px;
             color: #34495e;
         }
         .article p {
             font-size: 1em;
-            color: #7f8c8d;
+            color: #7f8c8d; /* Modern gray text */
         }
+
+        /* Health label for articles */
+        .health-label {
+            font-size: 0.9em;
+            color: white;
+            background-color: #27ae60; /* Health label green */
+            padding: 5px 10px;
+            border-radius: 5px;
+            margin-bottom: 10px;
+            display: inline-block;
+        }
+
         .read-more-button {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #000000;
+            background-color: #000000; /* Match the theme */
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            margin-top: 10px;
+            transition: background-color 0.3s;
+            margin-top: 10px; /* Spacing below the text */
         }
         .read-more-button:hover {
-            background-color: #2c3e50;
+            background-color: #2c3e50; /* Darker shade on hover */
         }
 
-        /* Category Tags */
-        .category {
-            font-size: 0.9em;
-            background-color: #f39c12;
-            color: white;
+        /* Subscribe button */
+        .subscribe-button {
             display: inline-block;
-            padding: 3px 8px;
-            border-radius: 3px;
-            margin-bottom: 5px;
-        }
-
-        /* Social Media Sharing */
-        .social-share {
-            margin-top: 10px;
-        }
-        .social-share a {
-            margin-right: 10px;
-            text-decoration: none;
-            color: #3498db;
-        }
-
-        /* Sidebar Newsletter Signup */
-        .sidebar {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #ffffff;
-            padding: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            width: 250px;
-        }
-        .sidebar h3 {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-        }
-        .sidebar input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        .sidebar button {
-            width: 100%;
-            padding: 10px;
+            padding: 15px 25px;
             background-color: #34495e;
             color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
+            text-decoration: none;
+            font-size: 1.2em;
+            border-radius: 5px;
+            text-align: center;
+            transition: background-color 0.3s;
         }
-        .sidebar button:hover {
+        .subscribe-button:hover {
             background-color: #2c3e50;
+        }
+
+        /* Social share buttons */
+        .share-buttons {
+            margin-top: 10px;
+        }
+        .share-buttons a {
+            text-decoration: none;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            margin-right: 10px;
+            background-color: #3b5998; /* Facebook blue */
+        }
+        .share-buttons a.twitter {
+            background-color: #1da1f2; /* Twitter blue */
         }
 
         footer {
             text-align: center;
             padding: 40px 0;
         }
+
+        @media screen and (max-width: 768px) {
+            .article {
+                flex-direction: column;
+                text-align: center;
+                align-items: center;
+            }
+            .article img {
+                margin-right: 0;
+                margin-bottom: 15px;
+                max-width: 100%;
+            }
+            .content {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
-
     <header>
         <h1>Weekly Daily Newsletter</h1>
         <p class="intro">Weekly news delivered every Saturday</p>
     </header>
 
-    <!-- Featured Article Section -->
-    <section class="featured-article">
-        <img src="https://via.placeholder.com/800x400" alt="Featured Article Image">
-        <h2>Featured: The Hidden Dangers of Apple Seeds</h2>
-        <p>Discover why apple seeds might not be as harmless as they seem and what to do about it.</p>
-        <a href="articles/article1.html" class="read-more-button">Read More</a>
-    </section>
-
-    <!-- Articles Grid -->
     <main class="content">
-        <div class="article">
-            <span class="category">Health</span>
-            <img src="https://via.placeholder.com/300x200" alt="Article 1 Image">
-            <h2>How apple seeds cause harm to human body</h2>
-            <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds...</p>
-            <a href="articles/article1.html" class="read-more-button">Read More</a>
-            <div class="social-share">
-                <a href="#">Share on Facebook</a>
-                <a href="#">Share on Twitter</a>
+        <!-- Featured Article -->
+        <section class="featured-article">
+            <img src="https://via.placeholder.com/800x400" alt="Featured Article">
+            <h2>Featured Article: The Hidden Dangers of Common Foods</h2>
+            <p>Explore the truth about everyday foods you didn't know could harm your health.</p>
+            <a href="articles/featured.html" class="read-more-button">Read More</a>
+        </section>
+
+        <div class="articles-container">
+            <div class="articles">
+                <div class="article">
+                    <img src="https://c8.alamy.com/comp/R5FP5H/apple-cut-in-half-with-seeds-and-pulp-to-show-R5FP5H.jpg" alt="Apple cut in half with seeds">
+                    <div>
+                        <span class="health-label">Health</span>
+                        <h2>How apple seeds cause harm to human body</h2>
+                        <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic.</p>
+                        <a href="articles/article1.html" class="read-more-button">Read More</a>
+                        
+                        <!-- Share buttons -->
+                        <div class="share-buttons">
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://yourwebsite.com/article1.html" target="_blank">Share on Facebook</a>
+                            <a href="https://twitter.com/intent/tweet?text=Check+out+this+article!&url=https://yourwebsite.com/article1.html" class="twitter" target="_blank">Share on Twitter</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more articles as needed -->
             </div>
         </div>
-        <!-- Repeat the same article structure for more articles -->
     </main>
-
-    <!-- Sidebar Signup Form -->
-    <div class="sidebar">
-        <h3>Subscribe</h3>
-        <p>Get our latest updates straight to your inbox.</p>
-        <input type="email" placeholder="Your email">
-        <button>Subscribe</button>
-    </div>
 
     <footer>
         <a href="signup.html" class="subscribe-button">Subscribe to Our Newsletter</a>
     </footer>
 
+    <script src="mobileRespo.js" defer></script>
 </body>
 </html>
+
