--- a/index.html
+++ b/index.html
@@ -32,32 +32,13 @@
 
         .content {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             padding: 20px;
         }
 
         .articles-container {
             width: 100%;
-            max-width: 1200px;
             margin: 0 auto;
-        }
-
-        /* Featured Article Section */
-        .featured-article {
-            background-color: #eaeaea;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 40px;
-            text-align: center;
-        }
-        .featured-article img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-        .featured-article h2 {
-            font-size: 2em;
-            color: #34495e;
         }
 
         .articles {
@@ -68,7 +49,6 @@
 
         .article {
             display: flex;
-            flex-direction: column;
             background: #ffffff;
             border-radius: 10px;
             padding: 20px;
@@ -80,9 +60,8 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
         .article img {
-            width: 100%;
-            height: auto;
-            max-width: 200px;
+            width: 200px; /* Adjust image size */
+            height: 150px; /* Maintain aspect ratio */
             border-radius: 5px;
             margin-right: 15px; /* Space between image and text */
         }
@@ -94,17 +73,6 @@
         .article p {
             font-size: 1em;
             color: #7f8c8d; /* Modern gray text */
-        }
-
-        /* Health label for articles */
-        .health-label {
-            font-size: 0.9em;
-            color: white;
-            background-color: #27ae60; /* Health label green */
-            padding: 5px 10px;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            display: inline-block;
         }
 
         .read-more-button {
@@ -137,41 +105,9 @@
             background-color: #2c3e50;
         }
 
-        /* Social share buttons */
-        .share-buttons {
-            margin-top: 10px;
-        }
-        .share-buttons a {
-            text-decoration: none;
-            color: white;
-            padding: 10px 15px;
-            border-radius: 5px;
-            margin-right: 10px;
-            background-color: #3b5998; /* Facebook blue */
-        }
-        .share-buttons a.twitter {
-            background-color: #1da1f2; /* Twitter blue */
-        }
-
         footer {
             text-align: center;
             padding: 40px 0;
-        }
-
-        @media screen and (max-width: 768px) {
-            .article {
-                flex-direction: column;
-                text-align: center;
-                align-items: center;
-            }
-            .article img {
-                margin-right: 0;
-                margin-bottom: 15px;
-                max-width: 100%;
-            }
-            .content {
-                padding: 10px;
-            }
         }
     </style>
 </head>
@@ -182,32 +118,56 @@
     </header>
 
     <main class="content">
-        <!-- Featured Article -->
-        <section class="featured-article">
-            <img src="https://via.placeholder.com/800x400" alt="Featured Article">
-            <h2>Featured Article: The Hidden Dangers of Common Foods</h2>
-            <p>Explore the truth about everyday foods you didn't know could harm your health.</p>
-            <a href="articles/featured.html" class="read-more-button">Read More</a>
-        </section>
-
         <div class="articles-container">
             <div class="articles">
                 <div class="article">
                     <img src="https://c8.alamy.com/comp/R5FP5H/apple-cut-in-half-with-seeds-and-pulp-to-show-R5FP5H.jpg" alt="Apple cut in half with seeds">
                     <div>
-                        <span class="health-label">Health</span>
                         <h2>How apple seeds cause harm to human body</h2>
                         <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic.</p>
                         <a href="articles/article1.html" class="read-more-button">Read More</a>
-                        
-                        <!-- Share buttons -->
-                        <div class="share-buttons">
-                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://yourwebsite.com/article1.html" target="_blank">Share on Facebook</a>
-                            <a href="https://twitter.com/intent/tweet?text=Check+out+this+article!&url=https://yourwebsite.com/article1.html" class="twitter" target="_blank">Share on Twitter</a>
-                        </div>
                     </div>
                 </div>
-                <!-- Add more articles as needed -->
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 2 Image">
+                    <div>
+                        <h2>Article Title 2</h2>
+                        <p>Article description for article 2...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 3 Image">
+                    <div>
+                        <h2>Article Title 3</h2>
+                        <p>Article description for article 3...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 4 Image">
+                    <div>
+                        <h2>Article Title 4</h2>
+                        <p>Article description for article 4...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 5 Image">
+                    <div>
+                        <h2>Article Title 5</h2>
+                        <p>Article description for article 5...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 6 Image">
+                    <div>
+                        <h2>Article Title 6</h2>
+                        <p>Article description for article 6...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -215,8 +175,7 @@
     <footer>
         <a href="signup.html" class="subscribe-button">Subscribe to Our Newsletter</a>
     </footer>
-
+    
     <script src="mobileRespo.js" defer></script>
 </body>
 </html>
-
