--- a/signup.html
+++ b/signup.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="signup.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Daily</title>
+    <link rel="stylesheet" href="signup.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        /* Main page styles */
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
@@ -14,10 +15,19 @@
             background-color: #f4f6f9;
             color: #333;
         }
+        
+        /* Sign-up page background image */
+        body {
+            background-image: url('your-background-image.jpg'); /* Replace with your image URL */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
         header {
             text-align: center;
             padding: 15px;
-            background-color: #1b1b1b; /* Modern dark blue */
+            background-color: #1b1b1b;
             color: white;
         }
         h1 {
@@ -31,12 +41,14 @@
             font-size: 1.2em;
         }
 
+        /* Responsive articles layout */
         .content {
             display: flex;
             justify-content: space-between;
             padding: 20px;
         }
 
+        /* Articles section styling */
         .articles-container {
             width: 100%;
             margin: 0 auto;
@@ -45,7 +57,7 @@
         .articles {
             display: flex;
             flex-direction: column;
-            gap: 20px; /* Space between articles */
+            gap: 20px;
         }
 
         .article {
@@ -61,10 +73,10 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
         .article img {
-            width: 200px; /* Adjust image size */
-            height: 150px; /* Maintain aspect ratio */
+            width: 200px;
+            height: 150px;
             border-radius: 5px;
-            margin-right: 15px; /* Space between image and text */
+            margin-right: 15px;
         }
         .article h2 {
             font-weight: 700;
@@ -73,26 +85,30 @@
         }
         .article p {
             font-size: 1em;
-            color: #7f8c8d; /* Modern gray text */
+            color: #7f8c8d;
         }
 
         .read-more-button {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #000000; /* Match the theme */
+            background-color: #000000;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
-            margin-top: 10px; /* Spacing below the text */
+            margin-top: 10px;
         }
         .read-more-button:hover {
-            background-color: #2c3e50; /* Darker shade on hover */
+            background-color: #2c3e50;
         }
 
+        /* Subscribe form */
         .subscribe-form {
             text-align: center;
             margin: 40px 0;
+            background: rgba(255, 255, 255, 0.8); /* Semi-transparent background for readability */
+            padding: 20px;
+            border-radius: 8px;
         }
         .subscribe-form h2 {
             margin-bottom: 20px;
@@ -107,7 +123,7 @@
         .subscribe-form input[type="text"] {
             padding: 10px;
             width: 100%;
-            max-width: 300px; /* Keep inputs responsive */
+            max-width: 300px;
             margin-bottom: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -175,3 +191,4 @@
     <script src="mobileRespo.js" defer></script>
 </body>
 </html>
+
