--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     </footer>
     
     <script src="mobileRespo.js" defer></script>
+    <script src="JsBG.js" defer></script>
+
 </body>
 </html>
 
