--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
         
         /* Sign-up page background image */
         body {
-            background-image: url('your-background-image.jpg'); /* Replace with your image URL */
+            background-image: url('https://th.bing.com/th?id=OIP.Rp2gCm61LOWbmgjdRjBMowHaEK&w=333&h=187&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2'); /* Replace with your image URL */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
