changes made added tags with js function

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
     
     <script src="mobileRespo.js" defer></script>
     <script src="JsBG.js" defer></script>
+    <script src="tags.js"></script>
+
 
 </body>
 </html>
