--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
     <script src="mobileRespo.js" defer></script>
     <script src="JsBG.js" defer></script>
     <script src="tags.js"></script>
+    <img src="image.jpg" alt="Description" loading="lazy">
+
+
+    <script type="application/ld+json">
+        {
+          "@context": "",
+          "@type": "Article",
+          "headline": "Article Title",
+          "author": "Author Name",
+          "datePublished": "2024-11-07",
+          "image": "https://example.com/image.jpg"
+        }
+        </script>
+        
+
+
+
 
 
 </body>
