--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <div class="article">
                     <img src="https://via.placeholder.com/150" alt="Article 2 Image">
                     <div>
-                        <h2>Article Title 2</h2>
-                        <p>Article description for article 2...</p>
-                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                        <h2>GTA VI release dates and what we know so far</h2>
+                        <p>The anticipation for Grand Theft Auto VI (GTA VI) has reached a fever pitch, with fans eagerly awaiting Rockstar Games' next major release.</p>
+                        <a href="articles/article2.html" class="read-more-button">Read More</a>
                     </div>
                 </div>
                 <div class="article">
