--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="article">
-                    <img src="https://via.placeholder.com/150" alt="Article 2 Image">
+                    <img src="https://images.shopcdn.co.uk/f8/ef/f8efed354a34c6b76f60525a38d41d12/2488x1400/webp/resize" alt="GTA VI">
                     <div>
                         <h2>GTA VI release dates and what we know so far</h2>
                         <p>The anticipation for Grand Theft Auto VI (GTA VI) has reached a fever pitch, with fans eagerly awaiting Rockstar Games' next major release.</p>
