changes reverted as experiment failed

--- a/index.html
+++ b/index.html
@@ -14,10 +14,58 @@
     </header>
 
     <main class="content">
-        <div class="articles-container" id="articles-container">
-            <!-- Initial articles will be inserted here -->
+        <div class="articles-container">
+            <div class="articles">
+                <div class="article">
+                    <img src="https://c8.alamy.com/comp/R5FP5H/apple-cut-in-half-with-seeds-and-pulp-to-show-R5FP5H.jpg" alt="Apple cut in half with seeds">
+                    <div>
+                        <h2>How apple seeds cause harm to human body</h2>
+                        <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic.</p>
+                        <a href="articles/article1.html" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://images.shopcdn.co.uk/f8/ef/f8efed354a34c6b76f60525a38d41d12/2488x1400/webp/resize" alt="GTA VI">
+                    <div>
+                        <h2>GTA VI release dates and what we know so far</h2>
+                        <p>The anticipation for Grand Theft Auto VI (GTA VI) has reached a fever pitch, with fans eagerly awaiting Rockstar Games' next major release.</p>
+                        <a href="articles/article2.html" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 3 Image">
+                    <div>
+                        <h2>Article Title 3</h2>
+                        <p>Article description for article 3...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 4 Image">
+                    <div>
+                        <h2>Article Title 4</h2>
+                        <p>Article description for article 4...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 5 Image">
+                    <div>
+                        <h2>Article Title 5</h2>
+                        <p>Article description for article 5...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="https://via.placeholder.com/150" alt="Article 6 Image">
+                    <div>
+                        <h2>Article Title 6</h2>
+                        <p>Article description for article 6...</p>
+                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="loader">Loading more articles...</div>
     </main>
 
     <footer>
@@ -27,8 +75,8 @@
     <script src="mobileRespo.js" defer></script>
     <script src="JsBG.js" defer></script>
     <script src="tags.js"></script>
-    <script src="infiniteScroll.js" defer></script>
     <img src="image.jpg" alt="Description" loading="lazy">
+
 
     <script type="application/ld+json">
         {
@@ -39,6 +87,13 @@
           "datePublished": "2024-11-07",
           "image": "https://example.com/image.jpg"
         }
-    </script>
+        </script>
+        
+
+
+
+
+
 </body>
 </html>
+
