--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 <!-- Add more as you create additional pages -->
             </nav>
         </footer>
-        
+        <link rel="stylesheet" href="styles.css">
+
 
 
 </body>
