made changes to the index to display latest news

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div class="article">
                     <img src="https://c8.alamy.com/comp/R5FP5H/apple-cut-in-half-with-seeds-and-pulp-to-show-R5FP5H.jpg" alt="Apple cut in half with seeds">
                     <div>
-                        <h2>How apple seeds cause harm to human body</h2>
-                        <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic.</p>
-                        <a href="articles/article1.html" class="read-more-button">Read More</a>
+                        <h2>Weekly News</h2>
+                        <p>Latest news on various topics</p>
+                        <a href="articles/articleX.html" class="read-more-button">Read More</a>
                     </div>
                 </div>
                 <div class="article">
@@ -35,9 +35,9 @@
                 <div class="article">
                     <img src="https://via.placeholder.com/150" alt="Article 3 Image">
                     <div>
-                        <h2>Article Title 3</h2>
-                        <p>Article description for article 3...</p>
-                        <a href="YOUR_LINKVERTISE_LINK_HERE" class="read-more-button">Read More</a>
+                        <h2>How apple seeds can be deadly for health</h2>
+                        <p>Apples can be a healthy snack or ingredient. However, it is not advisable to eat the seeds, as they contain small amounts of a chemical that produces cyanide, which is highly toxic</p>
+                        <a href="articles/article1.html" class="read-more-button">Read More</a>
                     </div>
                 </div>
                 <div class="article">
